<resources>
    <string name="app_name">ShopSuey</string>
    <string name="nav_addItem">Neuer Artikel</string>
    <string name="nav_shoppingList">Einkaufsliste</string>
    <string name="nav_stock">Lager</string>
    <string name="etv_artName">Artikelname</string>
    <string name="btntext_addArticle">Artikel hinzufügen</string>
    <string name="etv_artDesc">Artikelbeschreibung</string>
    <string name="etv_artPrice">Preis</string>
    <string name="row_switch_desc">kaufen</string>
    <string name="etv_artContent">Inhalt</string>
    <string name="stock">Bestand</string>
    <string name="minStock">Min. Best.</string>
    <string name="btntext_addNote">Notiz hinzufügen</string>
    <string name="btntext_editArticle">Artikel bearbeiten</string>

    <string-array name="unitArray">
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>l</item>
        <item>pcs</item>
    </string-array>


</resources>
