<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <EditText
        android:id="@+id/etv_artName"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/etv_artName"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary" />

    <EditText
        android:id="@+id/etv_artDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="110dp"
        android:text="@string/etv_artDesc"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary" />

    <EditText
        android:id="@+id/etv_artPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp"
        android:inputType="numberDecimal"
        android:text="@string/etv_artPrice"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary" />

    <Button
        android:id="@+id/btn_addArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="310dp"
        android:text="@string/btntext_addArticle" />
</RelativeLayout>