<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<EditText
android:id="@+id/etv_artNameEdit"

android:layout_width="match_parent"
android:layout_height="wrap_content"
android:hint="@string/etv_artName"
android:textAlignment="center"
android:textColor="@color/design_default_color_on_secondary"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<EditText
android:id="@+id/etv_artDescEdit"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignParentStart="true"
android:layout_alignParentTop="true"
android:layout_marginTop="100dp"
android:hint="@string/etv_artDesc"
android:textAlignment="center"
android:textColor="@color/design_default_color_on_secondary"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/etv_artNameEdit" />

<EditText
android:id="@+id/etv_artPriceEdit"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignParentStart="true"
android:layout_alignParentTop="true"
android:layout_marginTop="100dp"
android:hint="@string/etv_artPrice"
android:inputType="numberDecimal"
android:textAlignment="center"
android:textColor="@color/design_default_color_on_secondary"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/etv_artDescEdit" />

<EditText
android:id="@+id/etv_artContentEdit"
android:layout_width="100dp"
android:layout_height="wrap_content"
android:layout_alignParentStart="true"
android:layout_alignParentTop="true"
android:layout_alignParentEnd="true"
android:layout_marginTop="100dp"
android:layout_marginLeft="20dp"
android:layout_toEndOf="@+id/etv_artPriceEdit"
android:hint="@string/etv_artContent"
android:inputType="number"
android:textAlignment="center"
android:textColor="@color/design_default_color_on_secondary"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/etv_artPriceEdit" />

<Spinner
android:id="@+id/spinnerUnitEdit"
android:layout_width="100dp"
android:layout_height="wrap_content"
android:layout_below="@+id/etv_artPriceEdit"
android:layout_alignParentStart="true"
android:layout_alignParentBottom="true"
app:layout_constraintEnd_toEndOf="parent"
android:layout_marginRight="20dp"
android:layout_marginTop="100dp"
app:layout_constraintTop_toBottomOf="@+id/etv_artPriceEdit" />

<Button
android:id="@+id/btn_editArticle"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_alignParentStart="true"
android:layout_alignParentTop="true"
android:layout_marginTop="50dp"
android:text="@string/btntext_editArticle"
app:layout_constraintTop_toBottomOf="@+id/etv_artContentEdit"
tools:layout_editor_absoluteX="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>